<resources>
    <string name="app_name">School Management Application</string>
    <string name="Login">Login</string>
    <string name="capslogin">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="remember">Remember me</string>
    <string name="CNSC">CAMARINES NORTE STATE COLLEGE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="version">Version 1.0.0</string>
    <string name="TypeSchedule">Online</string>
    <string name="UserSample">Ricardo Dalisay</string>
    <string name="CourseCardo">Bachelor of Science in Crominology</string>
    <string name="SectionB">Section: B -</string>
    <string name="idNum">ID: 1122 -</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="subjects">Subjects</string>
    <string name="announcements">Announcements:</string>
    <string name="assignments">Assignments:</string>
    <string name="notes">Notes:</string>
    <string name="syllabus">Syllabus:</string>
    <string name="description">Description</string>
    <string name="schedule">Schedule</string>
    <string name="science">Science</string>
    <string name="time">3:00-4:00pm</string>
    <string name="choose_from">Choose From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="announcement_1_sample">announcement 1</string>
    <string name="informations">Informations</string>
    <string name="assignments_1">Assignments 1</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="notes1">Notes:</string>
    <string name="enter_new_title">Enter New Title</string>
    <string name="update">Update</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="add_item">Add Item</string>
</resources>