<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:background="@drawable/layout_subjects">

            <ImageView
                android:id="@+id/imgsubs"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="@color/foregroundTint"
                android:foregroundTintMode="src_atop"
                android:background="@drawable/bgsub1"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textSubDesc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="2"
                android:layout_margin="5dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/description"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSubSched" />

            <TextView
                android:id="@+id/textSubSched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/schedule"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textSubTitle"
                app:layout_constraintTop_toBottomOf="@+id/imgsubs" />

            <TextView
                android:id="@+id/textSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/science"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgsubs"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/time"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textSubSched"
                app:layout_constraintTop_toTopOf="@+id/textSubSched" />

            <ImageButton
                android:id="@+id/imgBtnMoreSubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/fulltrans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_more_vert_24"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>